--- a/entries/entry4/main.css
+++ b/entries/entry4/main.css
@@ -34,7 +34,23 @@ body {
 
 p {
     font-size: 14px;
-    color: #ffffff;
+    color: #000FB0;
+    font-family: "Case-Regular", serif;
+    font-weight: 400;
+    font-style: normal;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translateX(-50%);
+    letter-spacing: 25px;
+}
+
+p1 {
+    font-size: 14px;
+    color: #000FB0;
     font-family: "Case-Regular", serif;
     font-weight: 400;
     font-style: normal;
@@ -45,27 +61,13 @@ p {
     top: 50%;
     left: 50%;
     transform: translateX(-50%);
-}
-
-p1 {
-    font-size: 14px;
-    color: #ffffff;
-    font-family: "Case-Regular", serif;
-    font-weight: 400;
-    font-style: normal;
-    margin: 0;
-    padding: 0;
-    text-align: center;
-    position: absolute;
-    top: 60%;
-    left: 50%;
-    transform: translateX(-50%);
+    letter-spacing: 25px;
 }
 
 
 p2 {
     font-size: 14px;
-    color: #ffffff;
+    color: #000FB0;
     font-family: "Case-Regular", serif;
     font-weight: 400;
     font-style: normal;
@@ -76,12 +78,13 @@ p2 {
     top: 70%;
     left: 50%;
     transform: translateX(-50%);
+    letter-spacing: 25px;
 }
 
 
 p3 {
     font-size: 14px;
-    color: #ffffff;
+    color: #000FB0;
     font-family: "Case-Regular", serif;
     font-weight: 400;
     font-style: normal;
@@ -92,6 +95,7 @@ p3 {
     top: 80%;
     left: 50%;
     transform: translateX(-50%);
+    letter-spacing: 25px;
 }
 
 
@@ -108,12 +112,13 @@ p4 {
     top: 90%;
     left: 50%;
     transform: translateX(-50%);
+    letter-spacing: 25px;
 }
 
 
 p5 {
     font-size: 14px;
-    color: #ffffff;
+    color: #000FB0;
     font-family: "Case-Regular", serif;
     font-weight: 400;
     font-style: normal;
@@ -124,6 +129,7 @@ p5 {
     top: 98%;
     left: 50%;
     transform: translateX(-50%);
+    letter-spacing: 25px;
 }
 
 
@@ -133,6 +139,7 @@ position: absolute;
 top: 0px;
 left: 50%;
 transform: translateX(-50%);
+letter-spacing: 25px;
 
 }
 
