--- a/entries/entry2/main.css
+++ b/entries/entry2/main.css
@@ -1,82 +1,79 @@
+
 body {
-background-color:black ;
-}
-
-a {
-    font-size: 50px;
+    background-color:  #000000;
+    font-family:  "neue-haas-grotesk-display", sans-serif;
     color: #ffffff;
-    font-family: verdana;
-    margin:0;
-	padding: 0;
-	text-align: center;
-    position: absolute;
-    top: 15%;
-    left: 50%;
-    transform: translateX(-50%);
+    padding: 50px;
+  }
+
+
+
+/* test change*/
+@media (max-width: 650px) {
+    body {
+      padding-left: 0em;
+    }
+     h1 {
+        font-size: 30px;
+        color: #ffffff;
+    }
+  }
+
+
+/* The body's font-size is smaller by default */
+body {
+    font-size: 16px;
+  }
+  
+  /* tablet */
+  @media (min-width: 768px) {
+    body {
+      font-size: 16px;
+    }
+  }
+  
+  /* desktop */
+  @media (min-width: 992px) {
+    body {
+      font-size: 16px;
+    }
+  }
+  
+  /* wide-screen */
+  @media (min-width: 1200px) {
+    body {
+      font-size: 16px;
+      padding-left: 4em;
+    }
+  }
+
+
+h1 {
+    font-size: 64px;
+    color: #ffffff;
 }
 
-.img-knot {
-    margin:0;
-	padding: 0;
-    width: 800px;
-	text-align: center;
-    position: absolute;
-    top: 23%;
-    left: 50%;
-    transform: translateX(-50%);
+.pill {
+    font-size: 14px;
+    font-family: "neue-haas-grotesk-display", sans-serif;
+    color: #ffffff;
+    padding: 0.5em 1em;
+    border-radius: 1em;
+    border: 1px;
+    outline: none;
+    background: rgb(25, 0, 255) ;
+    cursor: pointer;
 }
 
-.img-knot1 {
-    margin:0;
-	padding: 0;
-    width: 60px;
-	text-align: center;
-    position: absolute;
-    top: 0%;
-    left: 15%;
-    transform: translateX(-50%);
+.pill:hover {
+    background-color: rgb(77, 58, 248) ;
 }
 
-.img-knot3 {
-    margin:0;
-	padding: 0;
-    width: 60px;
-	text-align: center;
-    position: absolute;
-    top: 0%;
-    right: 12%;
-    transform: translateX(-50%);
-}
+.container {
+    padding-left: 5em;
 
-.img-knot2 {
-    margin:0;
-	padding: 0;
-    width: 100px;
-	text-align: center;
-    position: absolute;
-    top: 17.8%;
-    left: 34%;
-    transform: translateX(-50%);
-}
+  }
 
-.img-knot4 {
-    margin:0;
-	padding: 0;
-    width: 100px;
-	text-align: center;
-    position: absolute;
-    top: 17.8%;
-    right: 27.5%;
-    transform: translateX(-50%);
-}
-
-.img-escher {
-    margin:0;
-	padding: 0;
-    width: 300px;
-	text-align: center;
-    position: absolute;
-    top: 54%;
-    right: 31%;
-    transform: translateX(-50%);
-}
+img {
+    max-width: 80%;
+  }
