--- a/entries/entry3/main.css
+++ b/entries/entry3/main.css
@@ -1,111 +1,81 @@
 body {
     background-color:black ;
+    color: white;
+    font-family:  "neue-haas-grotesk-display", sans-serif;
     }
 
-    @font-face {
+@font-face {
         font-family: 'Case';
         src: url('Case-Regular.woff2') format('woff2'),
             url('Case-Regular.woff') format('woff');
         font-weight: normal;
         font-style: normal;
         font-display: swap;
-    }
-                     
+    }                  
 .case {
     font-family: "Case-Regular", serif;
   }
 
-    a {
-        font-size: 50px;
-        color: #ffffff;
-        font-family: lato;
-        margin:0;
-        padding: 0;
-        text-align: center;
-        position: absolute;
-        top: 15%;
-        left: 50%;
-        transform: translateX(-50%);
-    }
-
-    h1 {
-        font-size: 64px;
-        color: #ffffff;
-        font-family: "neue-haas-grotesk-display", sans-serif;
-        font-weight: 600;
-        font-style: normal;
-        margin:0;
-        padding: 0;
-        text-align: center;
-        position: absolute;
-        top: 1%;
-        left: 50%;
-        transform: translateX(-50%);
-        letter-spacing: -1px;
-    }
-
-    h2 {
-        font-size: 80px;
-        color: #ffffff;
-        font-family: "neue-haas-grotesk-display", sans-serif;
-        font-weight: 600;
-        font-style: normal;
-        margin:0;
-        padding: 0;
-        text-align: left;
-        position: absolute;
-        top: 88%;
-        left: 50%;
-        transform: translateX(-50%);
-        letter-spacing: -2px;
-        line-height: 52pt;
-    }
-
-
-    p {
-        font-size: 14px;
-        color: #ffffff;
-        font-family: "Case-Regular", serif;
-        font-weight: 400;
-        font-style: normal;
-        text-align: left;
-        position: absolute;
-        top: 118%;
-        left: 50%;
-        transform: translateX(-50%);
-    
-    }
-
-    .img-sasai_2 {
-        margin:0;
-	    padding: 0;
-        width: 100%;
-        position: absolute;
-        top: 195%;
-        left: 52%;
-        transform: translateX(-50%);
-    }
-
-.pill {
-    font-size: 12px;
-    font-family: "Case-Regular", serif;
-    padding: 0.5em 1em;
-    border-radius: 1em;
-    border: 1px;
-    outline: none;
-    background: palevioletred ;
-    border-color: palevioletred ;
-    cursor: pointer;
-}
-
-.pill:hover {
-    background-color: rgb(187, 97, 127);
-}
-
-.pill {
+h1 {
+    font-size: 4vw;
+    color: #ffffff;
+    font-family: "neue-haas-grotesk-display", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    margin:0;
+    padding-top: 0.5em;
+    text-align: center;
     position: absolute;
-        top: 855px;
-        left: -315px;
-        transform: translateX(-50%);
+    top: 1%;
+    left: 50%;
+    transform: translateX(-50%);
+    letter-spacing: -1px;
 }
 
+.flex-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    padding-left: 25em;
+}
+  
+.flex-item {
+    text-align: left;
+}
+
+
+img {
+    max-width: 45em;
+    height: auto;
+    margin-top: 5em;
+  }
+
+
+h2 {
+    font-size: 5em;
+    width: 70%;
+    margin-bottom: 20px;
+}
+
+
+.pill-link {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #000dff;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 20px;
+    margin-bottom: 25px;
+  }
+  
+
+  .pill-link:hover {
+    background-color: rgb(77, 58, 248);
+  }
+  
+p {
+    font-size: 16px;
+    width: 70%;
+    margin-bottom: 8em
+}
