--- a/entries/entry2/main.css
+++ b/entries/entry2/main.css
@@ -23,6 +23,7 @@ body {
 /* The body's font-size is smaller by default */
 body {
     font-size: 16px;
+    max-width: 80%;
   }
   
   /* tablet */
@@ -75,5 +76,73 @@ h1 {
   }
 
 img {
-    max-width: 80%;
+    width: 20%;
   }
+
+
+
+
+
+
+
+  * {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    background-color: #000000;
+}
+
+li, a, button {
+    font-family: "neue-haas-grotesk-display", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    text-decoration: none;
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 10%;
+}
+
+.logo {
+    width: 25%;
+    cursor: pointer;
+}
+
+.nav_links {
+    list-style: none;
+}
+
+.nav_links li {
+    display: inline-block;
+    color: white;
+    padding: 0px 20px;
+}
+
+.nav_links li a {
+    transition: all 0.3s ease 0s;
+}
+
+.nav_links li a:hover {
+    color: blue;
+}
+
+a:visited {
+    color: white
+  }
+
+button {
+    color: white;
+    padding: 9px 25px;
+    background-color: blue;
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: all 0.3s ease 0s;
+}
+
+button:hover {
+    background-color: black;
+}
