--- a/entries/entry5/main.css
+++ b/entries/entry5/main.css
@@ -1,22 +1,4 @@
-body {
-    background-color:black ;
-    }
-
-    @font-face {
-        font-family: 'Case';
-        src: url('Case-Regular.woff2') format('woff2'),
-            url('Case-Regular.woff') format('woff');
-        font-weight: normal;
-        font-style: normal;
-        font-display: swap;
-    
-    }
-                     
-.case {
-    font-family: "Case-Regular", serif;
-  }
-
-  h1 {
+ h1 {
     font-size: 64px;
     color: #ffffff;
     font-family: "neue-haas-grotesk-display", sans-serif;
@@ -32,8 +14,6 @@ body {
     transform: translateX(-50%);
     letter-spacing: 20px;
 }
-
-
 
 
 .faith_3 {
@@ -107,4 +87,66 @@ body {
     left: 160%;
     transform: translateX(-50%);
     padding-bottom: 100px;
+}
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    background-color: #000000;
+}
+
+li, a, button {
+    font-family: "neue-haas-grotesk-display", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    text-decoration: none;
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 10%;
+}
+
+.logo {
+    width: 25%;
+    cursor: pointer;
+}
+
+.nav_links {
+    list-style: none;
+}
+
+.nav_links li {
+    display: inline-block;
+    color: white;
+    padding: 0px 20px;
+}
+
+.nav_links li a {
+    transition: all 0.3s ease 0s;
+}
+
+.nav_links li a:hover {
+    color: blue;
+}
+
+a:visited {
+    color: white
+  }
+
+button {
+    color: white;
+    padding: 9px 25px;
+    background-color: blue;
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: all 0.3s ease 0s;
+}
+
+button:hover {
+    background-color: black;
 }
