--- a/entries/entry6/main.css
+++ b/entries/entry6/main.css
@@ -48,6 +48,7 @@ body {
 
 h1 {
     font-size: 64px;
+    font-family: "neue-haas-grotesk-display", sans-serif;
     color: #ffffff;
 }
 
@@ -71,6 +72,11 @@ p {
     background-color: rgb(77, 58, 248) ;
 }
 
+
+
+
+
+
 .container {
     padding-left: 5em;
 
@@ -79,3 +85,59 @@ p {
 img {
     max-width: 80%;
   }
+
+
+  li, a, button {
+    font-family: "neue-haas-grotesk-display", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    text-decoration: none;
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 10%;
+}
+
+.logo {
+    width: 25%;
+    cursor: pointer;
+}
+
+.nav_links {
+    list-style: none;
+}
+
+.nav_links li {
+    display: inline-block;
+    color: white;
+    padding: 0px 20px;
+}
+
+.nav_links li a {
+    transition: all 0.3s ease 0s;
+}
+
+.nav_links li a:hover {
+    color: blue;
+}
+
+a:visited {
+    color: white
+  }
+
+button {
+    color: white;
+    padding: 9px 25px;
+    background-color: blue;
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: all 0.3s ease 0s;
+}
+
+button:hover {
+    background-color: black;
+}
