--- a/entries/entry2/main.css
+++ b/entries/entry2/main.css
@@ -59,6 +59,7 @@ h1 {
     font-family: "neue-haas-grotesk-display", sans-serif;
     color: #ffffff;
     padding: 0.5em 1em;
+    margin-bottom: 3em;
     border-radius: 1em;
     border: 1px;
     outline: none;
