--- a/entries/entry2/main.css
+++ b/entries/entry2/main.css
@@ -1,149 +1,143 @@
 
 body {
-    background-color:  #000000;
-    font-family:  "neue-haas-grotesk-display", sans-serif;
-    color: #ffffff;
-    padding: 50px;
-  }
+  background-color:  #000000;
+  font-family:  "neue-haas-grotesk-display", sans-serif;
+  color: #ffffff;
+  padding: 50px;
+}
 
 
 
-/* test change*/
 @media (max-width: 650px) {
-    body {
-      padding-left: 0em;
-    }
-     h1 {
-        font-size: 30px;
-        color: #ffffff;
-    }
+  body {
+    padding-left: 0em;
   }
+   h1 {
+      font-size: 30px;
+      color: #ffffff;
+  }
+}
 
 
-/* The body's font-size is smaller by default */
 body {
+  font-size: 16px;
+}
+
+/* tablet */
+@media (min-width: 768px) {
+  body {
     font-size: 16px;
-    max-width: 80%;
   }
-  
-  /* tablet */
-  @media (min-width: 768px) {
-    body {
-      font-size: 16px;
-    }
+}
+
+/* desktop */
+@media (min-width: 992px) {
+  body {
+    font-size: 16px;
   }
-  
-  /* desktop */
-  @media (min-width: 992px) {
-    body {
-      font-size: 16px;
-    }
+}
+
+/* wide-screen */
+@media (min-width: 1200px) {
+  body {
+    font-size: 16px;
+    padding-left: 4em;
   }
-  
-  /* wide-screen */
-  @media (min-width: 1200px) {
-    body {
-      font-size: 16px;
-      padding-left: 4em;
-    }
-  }
+}
 
 
 h1 {
-    font-size: 64px;
-    color: #ffffff;
+  font-size: 64px;
+  font-family: "neue-haas-grotesk-display", sans-serif;
+  color: #ffffff;
+}
+
+p {
+max-width: 80%;
 }
 
 .pill {
-    font-size: 14px;
-    font-family: "neue-haas-grotesk-display", sans-serif;
-    color: #ffffff;
-    padding: 0.5em 1em;
-    margin-bottom: 3em;
-    border-radius: 1em;
-    border: 1px;
-    outline: none;
-    background: rgb(25, 0, 255) ;
-    cursor: pointer;
+  font-size: 14px;
+  font-family: "neue-haas-grotesk-display", sans-serif;
+  color: #ffffff;
+  padding: 0.5em 1em;
+  border-radius: 1em;
+  border: 1px;
+  outline: none;
+  background: rgb(25, 0, 255) ;
+  cursor: pointer;
 }
 
 .pill:hover {
-    background-color: rgb(77, 58, 248) ;
+  background-color: rgb(77, 58, 248) ;
 }
+
+
+
+
+
 
 .container {
-    padding-left: 5em;
+  padding-left: 5em;
 
-  }
-
-img {
-    width: 20%;
-  }
-
-
-
-
-
-
-
-  * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    background-color: #000000;
 }
 
+img {
+  max-width: 80%;
+}
+
+
 li, a, button {
-    font-family: "neue-haas-grotesk-display", sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    text-decoration: none;
+  font-family: "neue-haas-grotesk-display", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  text-decoration: none;
 }
 
 header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 30px 10%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 10%;
 }
 
 .logo {
-    width: 25%;
-    cursor: pointer;
+  width: 25%;
+  cursor: pointer;
 }
 
 .nav_links {
-    list-style: none;
+  list-style: none;
 }
 
 .nav_links li {
-    display: inline-block;
-    color: white;
-    padding: 0px 20px;
+  display: inline-block;
+  color: white;
+  padding: 0px 20px;
 }
 
 .nav_links li a {
-    transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
 }
 
 .nav_links li a:hover {
-    color: blue;
+  color: blue;
 }
 
 a:visited {
-    color: white
-  }
+  color: white
+}
 
 button {
-    color: white;
-    padding: 9px 25px;
-    background-color: blue;
-    border: none;
-    border-radius: 50px;
-    cursor: pointer;
-    transition: all 0.3s ease 0s;
+  color: white;
+  padding: 9px 25px;
+  background-color: blue;
+  border: none;
+  border-radius: 50px;
+  cursor: pointer;
+  transition: all 0.3s ease 0s;
 }
 
 button:hover {
-    background-color: black;
+  background-color: black;
 }
