--- a/entries/entry7/main.css
+++ b/entries/entry7/main.css
@@ -27,6 +27,8 @@ html * {
 #film {
     animation: filmSpin 30s ease-out infinite;
     height:200px;
+    background: none;
+    border: none;
   }
   
 
