--- a/entries/entry1/main.css
+++ b/entries/entry1/main.css
@@ -1,15 +1,12 @@
 body {
-    background-color:  #000000;
-    color: #ffffff;
-    padding: 50px;
-  }
-
+  background-color: #000000;
+  color: #ffffff;
+  padding: 50px;
+  margin: 0;
+}
 
 * {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  background-color: #000000;
 }
 
 li, a, button {
@@ -23,47 +20,38 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 10%;
   padding-bottom: 40px;
+  position: absolute;
 }
 
-.logo {
-  width: 25%;
-  cursor: pointer;
+.top-left-button,
+.top-right-button {
+    position: fixed;
+    top: 10px;
+    padding: 10px;
+    color: blue;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    display: inline-block;
+    font-family: "neue-haas-grotesk-display", sans-serif;
+    font-weight: 100;
+    text-decoration: none;
+    transition: color 0.3s ease;
 }
 
-.nav_links {
-  list-style: none;
+.top-left-button {
+    left: 10px;
 }
 
-.nav_links li {
-  display: inline-block;
-  color: white;
-  padding: 0px 20px;
+.top-right-button {
+    right: 10px;
 }
 
-.nav_links li a {
-  transition: all 0.3s ease 0s;
+.top-left-button:hover { 
+    color: rgb(255, 255, 255);
 }
 
-.nav_links li a:hover {
-  color: blue;
-}
-
-a:visited {
-  color: white
-}
-
-button {
-  color: white;
-  padding: 9px 25px;
-  background-color: blue;
-  border: none;
-  border-radius: 50px;
-  cursor: pointer;
-  transition: all 0.3s ease 0s;
-}
-
-button:hover {
-  background-color: black;
+.top-right-button:hover { 
+    color: rgb(255, 255, 255);
 }
