--- a/entries/entry2/main.css
+++ b/entries/entry2/main.css
@@ -1,12 +1,50 @@
-
 body {
-  background-color:  #000000;
-  font-family:  "neue-haas-grotesk-display", sans-serif;
-  color: #ffffff;
-  padding: 50px;
+    margin: 0;
+    padding: 0;
+    background-color: #000000;
+    font-family: "neue-haas-grotesk-display", sans-serif;
+    color: #ffffff;
+    font-size: 16px;
+    padding-bottom: 100px;
 }
 
+.top-left-button,
+.top-right-button {
+    position: fixed;
+    top: 10px;
+    padding: 10px;
+    color: blue;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    display: inline-block;
+    font-family: "neue-haas-grotesk-display", sans-serif;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
 
+.top-left-button {
+    left: 10px;
+}
+
+.top-right-button {
+    right: 10px;
+}
+
+.top-left-button:hover { 
+    color: rgb(255, 255, 255);
+}
+
+.top-right-button:hover { 
+    color: rgb(255, 255, 255);
+}
+
+.container {
+    padding-top: 60px;
+    padding-left: 5em;
+    max-width: 800px; 
+    margin: 0 auto; 
+}
 
 @media (max-width: 650px) {
   body {
@@ -17,7 +55,6 @@ body {
       color: #ffffff;
   }
 }
-
 
 body {
   font-size: 16px;
@@ -46,6 +83,8 @@ body {
 }
 
 
+
+
 h1 {
   font-size: 64px;
   font-family: "neue-haas-grotesk-display", sans-serif;
@@ -72,16 +111,6 @@ max-width: 80%;
   background-color: rgb(77, 58, 248) ;
 }
 
-
-
-
-
-
-.container {
-  padding-left: 5em;
-
-}
-
 img {
   max-width: 80%;
 }
@@ -99,45 +128,4 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 30px 10%;
-}
-
-.logo {
-  width: 25%;
-  cursor: pointer;
-}
-
-.nav_links {
-  list-style: none;
-}
-
-.nav_links li {
-  display: inline-block;
-  color: white;
-  padding: 0px 20px;
-}
-
-.nav_links li a {
-  transition: all 0.3s ease 0s;
-}
-
-.nav_links li a:hover {
-  color: blue;
-}
-
-a:visited {
-  color: white
-}
-
-button {
-  color: white;
-  padding: 9px 25px;
-  background-color: blue;
-  border: none;
-  border-radius: 50px;
-  cursor: pointer;
-  transition: all 0.3s ease 0s;
-}
-
-button:hover {
-  background-color: black;
 }
