--- a/entries/entry3/main.css
+++ b/entries/entry3/main.css
@@ -16,6 +16,37 @@ body {
     font-family: "Case-Regular", serif;
   }
 
+.top-left-button,
+.top-right-button {
+    position: fixed;
+    top: 10px;
+    padding: 10px;
+    color: blue;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    display: inline-block;
+    font-family: "neue-haas-grotesk-display", sans-serif;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+.top-left-button {
+    left: 10px;
+}
+
+.top-right-button {
+    right: 10px;
+}
+
+.top-left-button:hover { 
+    color: rgb(255, 255, 255);
+}
+
+.top-right-button:hover { 
+    color: rgb(255, 255, 255);
+}
+
 h1 {
     font-size: 4vw;
     color: #ffffff;
@@ -82,58 +113,6 @@ p {
 
 
 
-
-
-
-
-
-
-
-
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    background-color: #000000;
-}
-
-li, a, button {
-    font-family: "neue-haas-grotesk-display", sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    text-decoration: none;
-}
-
-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 30px 10%;
-}
-
-.logo {
-    width: 25%;
-    cursor: pointer;
-}
-
-.nav_links {
-    list-style: none;
-}
-
-.nav_links li {
-    display: inline-block;
-    color: white;
-    padding: 0px 20px;
-}
-
-.nav_links li a {
-    transition: all 0.3s ease 0s;
-}
-
-.nav_links li a:hover {
-    color: blue;
-}
-
 a:visited {
     color: white
   }
@@ -151,3 +130,41 @@ button {
 button:hover {
     background-color: black;
 }
+
+
+@media (max-width: 650px) {
+    body {
+      padding-left: 0em;
+    }
+     h1 {
+        font-size: 30px;
+        color: #ffffff;
+    }
+  }
+  
+  body {
+    font-size: 16px;
+  }
+  
+  /* tablet */
+  @media (min-width: 768px) {
+    body {
+      font-size: 16px;
+    }
+  }
+  
+  /* desktop */
+  @media (min-width: 992px) {
+    body {
+      font-size: 16px;
+    }
+  }
+  
+  /* wide-screen */
+  @media (min-width: 1200px) {
+    body {
+      font-size: 16px;
+      padding-left: 4em;
+    }
+  }
+  
