--- a/entries/entry9/main.css
+++ b/entries/entry9/main.css
@@ -59,8 +59,8 @@ body {
 
 .wobble-container, .cascade-container {
     text-align: center;
-    margin-top: 60px;
-    margin-bottom: 30px;
+    margin-top: 215px;
+    margin-bottom: 0px;
     letter-spacing: 30px;
 }
 
@@ -132,7 +132,7 @@ body {
 }
 
 
-/* Cascading Text Section */
+/* Cascading Text */
 
 .cascade-container {
     text-align: left;
@@ -186,4 +186,35 @@ body {
         transform: translateY(20px);
         opacity: 0;
     }
+}
+
+.top-left-button,
+.top-right-button {
+    position: fixed;
+    top: 10px;
+    padding: 10px;
+    color: blue;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    display: inline-block;
+    font-family: "neue-haas-grotesk-display", sans-serif;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+.top-left-button {
+    left: 10px;
+}
+
+.top-right-button {
+    right: 10px;
+}
+
+.top-left-button:hover { 
+    color: rgb(255, 255, 255);
+}
+
+.top-right-button:hover { 
+    color: rgb(255, 255, 255);
 }
