--- a/entries/entry5/main.css
+++ b/entries/entry5/main.css
@@ -1,3 +1,14 @@
+body {
+    margin: 0;
+    padding: 0;
+    background-color: #000000;
+    font-family: "neue-haas-grotesk-display", sans-serif;
+    color: #ffffff;
+    font-size: 16px;
+    padding-bottom: 100px;
+}
+ 
+ 
  h1 {
     font-size: 64px;
     color: #ffffff;
@@ -89,50 +100,6 @@
     padding-bottom: 100px;
 }
 
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    background-color: #000000;
-}
-
-li, a, button {
-    font-family: "neue-haas-grotesk-display", sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    text-decoration: none;
-}
-
-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 30px 10%;
-}
-
-.logo {
-    width: 25%;
-    cursor: pointer;
-}
-
-.nav_links {
-    list-style: none;
-}
-
-.nav_links li {
-    display: inline-block;
-    color: white;
-    padding: 0px 20px;
-}
-
-.nav_links li a {
-    transition: all 0.3s ease 0s;
-}
-
-.nav_links li a:hover {
-    color: blue;
-}
-
 a:visited {
     color: white
   }
@@ -149,4 +116,35 @@ button {
 
 button:hover {
     background-color: black;
+}
+
+.top-left-button,
+.top-right-button {
+    position: fixed;
+    top: 10px;
+    padding: 10px;
+    color: blue;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    display: inline-block;
+    font-family: "neue-haas-grotesk-display", sans-serif;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+.top-left-button {
+    left: 10px;
+}
+
+.top-right-button {
+    right: 10px;
+}
+
+.top-left-button:hover { 
+    color: rgb(255, 255, 255);
+}
+
+.top-right-button:hover { 
+    color: rgb(255, 255, 255);
 }
