--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@
 
 li, a, button {
     font-family: "neue-haas-grotesk-display", sans-serif;
-    font-weight: 300;
+    font-weight: 700;
     font-size: 16px;
     text-decoration: none;
 }
@@ -19,13 +19,11 @@ header {
     padding: 30px 10%;
 }
 
-.logo {
-    width: 25%;
-    cursor: pointer;
-}
 
 .nav_links {
     list-style: none;
+    justify-content: flex-start;
+    align-items: center;
 }
 
 .nav_links li {
@@ -60,20 +58,60 @@ button:hover {
     background-color: black;
 }
 
-h1 {
-color: white;
-font-family: "Gustavo";
-font-size: 6em;
-margin: 0;
-padding: 0;
-text-align: center;
-position: absolute;
-top: 30%;
-left: 50%;
-transform: translateX(-50%);
-background-color: transparent; /*removes black background */
-}
 
-.glitch {
-    width: 60%;
+
+body {
+    margin: 0;
+    padding: 0;
+    background-color: #000000;
+  }
+  
+  .container {
+    position: relative;
+  }
+  
+  h1 {
+    color: white;
+    font-family: "Gustavo";
+    font-size: 6vw;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    background-color: transparent;
+  }
+  
+  .glitch {
+    width: 67%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+  }
+  
+
+  /* Smartphone */
+@media only screen and (max-width: 768px) {
+    .nav_links {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+  
+    .nav_links li {
+      margin: 10px 0;
+    }
+
+    h1 {
+    font-size: 10vw;
+  }
+
+  .glitch {
+    width: 140%;
+  }
+
 }
