--- a/entries/entry9/main.css
+++ b/entries/entry9/main.css
@@ -55,7 +55,7 @@ body {
     font-weight: bold;
 }
 
-/* Wobble Text Section */
+/* Wobble Text */
 
 .wobble-container, .cascade-container {
     text-align: center;
